--- a/style.css
+++ b/style.css
@@ -53,10 +53,10 @@ body {
     background-color: #613287;
     border: none;
     color: white;
-    font-weight: 900;
+    font-weight: bolder;
     text-align: center;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 25px;
     padding: 10px 10px;
     display: block;
     margin: auto;
