--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     padding: 16px;
     box-sizing: border-box;
     margin: auto;
-    width: 620px;
+    width: 820px;
     text-align: center;
 }
 
@@ -56,7 +56,7 @@ body {
     font-weight: bolder;
     text-align: center;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 35px;
     padding: 10px 10px;
     display: block;
     margin: auto;
@@ -86,14 +86,26 @@ a:link {
     text-decoration: none;
 }
 
+a:visited {
+    color: transparent;
+    text-decoration: none;
+}
 
-@media screen and (max-width: 400px) {
+@media (min-width: 400px) {
     .content {
-        width: 820px;
+        width: 720px;
     }
     .enter {
-        font-size:35px;
+        font-size:30px;
     }
 }
 
+@media (min-width: 1025px) {
+    .content {
+        width: 620;
+    }
+    .enter {
+        font-size:25px;
+    }
+}
 
