optimize for ipad pro & iphone8

--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
+@-ms-viewport{
+  width: device-width;
+}
+
+
 body,
 html {
     height: 100%;
+    overflow:hidden;
 }
 
 body {
@@ -10,7 +16,7 @@ body {
 
 .full-bg {
     width: 100%;
-    height: 100%;
+    height:100%;
     background: url('121.jpg');
     background-size: cover;
     background-position: center;
@@ -25,7 +31,7 @@ body {
     padding: 16px;
     box-sizing: border-box;
     margin: auto;
-    width: 820px;
+    width: 100%;
     text-align: center;
 }
 
@@ -35,7 +41,7 @@ body {
 
 .content header h1 {
     color: #DAD9DB;
-    font-size: 48px;
+    font-size: 30px;
     margin: 30px;
 }
 
@@ -45,7 +51,7 @@ body {
     border-top: 2px solid white;
     border-bottom: 2px solid white;
     display: inline-block;
-    margin-top: 0;
+    margin-top: 10;
     margin-bottom: 20px;
 }
 
@@ -56,7 +62,7 @@ body {
     font-weight: bolder;
     text-align: center;
     text-decoration: none;
-    font-size: 35px;
+    font-size: 20px;
     padding: 10px 10px;
     display: block;
     margin: auto;
@@ -73,7 +79,7 @@ body {
 .icon {
     color: #DAD9DB;
     padding: 20px;
-    font-size: 25px;
+    font-size: 28px;
     margin-top: 30px;
 }
 
@@ -91,20 +97,60 @@ a:visited {
     text-decoration: none;
 }
 
+
+
 @media (min-width: 400px) {
     .content {
-        width: 720px;
+        width: 90%;
+        font-size: 38px;  
+    }
+    .content header h1 {
+        font-size:35px;
+    }
+    .content header h2 {
+        font-size:30px;
     }
     .enter {
-        font-size:30px;
+        font-size:22px;
     }
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1000px) {
     .content {
-        width: 620;
+        width: 70%;
+        font-size: 55px;  
+    }
+    .content header h1 {
+        font-size:50px;
+    }
+    .content header h2 {
+        font-size:45px;
+        margin-bottom: 45px;
     }
     .enter {
+        font-size:40px;
+    }
+    .icon {
+        font-size:40px;
+    }
+}
+
+@media (min-width: 1100px){
+    .content {
+        width: 60%;
+        font-size: 48px;  
+    }
+    .content header h1 {
+        font-size:45px;
+    }
+    .content header h2 {
+        font-size:30px;
+        margin-bottom: 30px;
+    }
+    .enter {
+        font-size:25px;
+    }
+    .icon {
         font-size:25px;
     }
 }
