--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-@-ms-viewport{
-  width: device-width;
+@-ms-viewport {
+    width: device-width;
 }
 
 
 body,
 html {
     height: 100%;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 body {
@@ -16,7 +16,7 @@ body {
 
 .full-bg {
     width: 100%;
-    height:100%;
+    height: 100%;
     background: url('121.jpg');
     background-size: cover;
     background-position: center;
@@ -100,95 +100,81 @@ a:visited {
 @media (min-width: 400px) {
     .content {
         width: 80%;
-        font-size: 38px;  
+        font-size: 38px;
     }
     .content header h1 {
-        font-size:35px;
+        font-size: 35px;
     }
     .content header h2 {
-        font-size:30px;
+        font-size: 30px;
     }
     .enter {
-        font-size:22px;
+        font-size: 22px;
     }
 }
 
-@media (orientation:landscape) and (min-width: 400px) and (max-width: 999px) {
-     .content {
+@media (orientation:landscape) and (min-width: 400px) {
+    .content {
         width: 60%;
-        font-size: 20px; 
+        font-size: 20px;
         padding: 10px;
     }
 
     .content header h1 {
-        font-size:25px;
-        margin:0px;
+        font-size: 25px;
+        margin: 0px;
     }
     .content header h2 {
-        font-size:15px;
+        font-size: 15px;
     }
     .enter {
-        font-size:15px;
-    }
-    .icon{
-        margin-top:4px;
-        font-size: 20px;
-    }
-
-}
-
-@media screen and (orientation: landscape){
-    .content {
-        width:80%;
+        font-size: 15px;
     }
     .icon {
-        font-size:60px;
+        margin-top: 4px;
+        font-size: 20px;
     }
 }
 
 @media (min-width: 1000px) {
     .content {
         width: 80%;
-        font-size: 55px;  
+        font-size: 55px;
     }
     .content header h1 {
-        font-size:50px;
+        font-size: 50px;
     }
     .content header h2 {
-        font-size:45px;
+        font-size: 45px;
         margin-bottom: 45px;
     }
     .enter {
-        font-size:45px;
+        font-size: 45px;
     }
     .icon {
-        margin-top:40px;
-        font-size:50px;
+        margin-top: 40px;
+        font-size: 50px;
     }
 }
 
 
 
-@media (min-width: 1100px){
+@media (min-width: 1100px) {
     .content {
         width: 60%;
-        font-size: 48px;  
+        font-size: 48px;
     }
     .content header h1 {
-        font-size:45px;
+        font-size: 45px;
     }
     .content header h2 {
-        font-size:30px;
+        font-size: 30px;
         margin-bottom: 30px;
     }
     .enter {
-        font-size:25px;
+        font-size: 25px;
     }
     .icon {
-        font-size:25px;
+        font-size: 25px;
     }
 }
-
-
-
-
