--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     width: device-width;
 }
 
-
 body,
 html {
     height: 100%;
@@ -96,7 +95,6 @@ a:visited {
     text-decoration: none;
 }
 
-
 @media (min-width: 400px) {
     .content {
         width: 80%;
@@ -110,29 +108,6 @@ a:visited {
     }
     .enter {
         font-size: 22px;
-    }
-}
-
-@media (orientation:landscape) and (min-width: 400px) {
-    .content {
-        width: 60%;
-        font-size: 20px;
-        padding: 10px;
-    }
-
-    .content header h1 {
-        font-size: 25px;
-        margin: 0px;
-    }
-    .content header h2 {
-        font-size: 15px;
-    }
-    .enter {
-        font-size: 15px;
-    }
-    .icon {
-        margin-top: 4px;
-        font-size: 20px;
     }
 }
 
@@ -157,8 +132,6 @@ a:visited {
     }
 }
 
-
-
 @media (min-width: 1100px) {
     .content {
         width: 60%;
@@ -175,6 +148,54 @@ a:visited {
         font-size: 25px;
     }
     .icon {
+        font-size: 25px;
+    }
+}
+
+@media (orientation:landscape) {
+    .content {
+        width: 60%;
+        font-size: 20px;
+        padding: 10px;
+    }
+
+    .content header h1 {
+        font-size: 55px;
+        margin-top: 20px;
+    }
+    .content header h2 {
+        font-size: 40px;
+    }
+    .enter {
+        font-size: 40px;
+    }
+    .icon {
+        margin-top: 30px;
+        font-size: 45px;
+    }
+}
+
+@media (orientation:landscape) and (max-width: 999px) {
+    .content {
+        width: 60%;
+        font-size: 10px;
+        padding: 10px;
+    }
+
+    .content header h1 {
+        font-size: 35px;
+        margin-top: 0px;
+    }
+    .content header h2 {
+        font-size: 20px;
+        margin-bottom: 0px;
+        margin-top:4px;
+    }
+    .enter {
+        font-size: 20px;
+    }
+    .icon {
+        margin-top: 0px;
         font-size: 25px;
     }
 }
